Fired PointerEvent from Node::dispatchMouseEvent() to fix a bug.

This is an urgent fix to make pointerups visible in M55 for sites
with flash objects. The ideal solution would be to remove all
direct event dispatches for plugins and PointerLocks, instead
route all PlaformMouseEvents through EventHandler.

BUG=659670

Review-Url: https://codereview.chromium.org/2510763002
Cr-Commit-Position: refs/heads/master@{#432889}

Former-commit-id: b649bb81f5ea6d908cfb3db1506219678e654d33